fix: inputs Styles overflow

--- a/src/components/HomePage/Form/style.css
+++ b/src/components/HomePage/Form/style.css
@@ -79,7 +79,7 @@
   border: 2px solid #f8f9fa;
   border-radius: 8px;
   height: 3rem;
-  padding: 0px 16px;
+  padding: 0px 36px 0 16px;
   max-width: 8rem;
 }
 /* https://acervolima.com/como-desativar-as-setas-da-entrada-numerica/ */
