--- a/src/components/HomePage/style.css
+++ b/src/components/HomePage/style.css
@@ -7,6 +7,12 @@
   align-items: center;
 }
 
+.Container > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 @media only screen and (min-width: 800px) {
   .App-headerWhite {
     display: flex;
